# docs/swagger.json
@@ -816,7 +816,7 @@
         },
         "/reviews/recent": {
             "get": {
-                "description": "표준 타입의 음식이 최소 하나 포함된 리뷰를 최신순으로 가져온다.",
+                "description": "표준 타입의 음식이 적어도 하나 포함된 리뷰를 가져와 음식 정보와 함께 반환한다.",
                 "consumes": [
                     "application/json"
                 ],
@@ -826,7 +826,7 @@
                 "tags": [
                     "Review"
                 ],
-                "summary": "표준 음식이 포함된 최신 리뷰 조회",
+                "summary": "최신 리뷰 조회",
                 "parameters": [
                     {
                         "type": "integer",
@@ -849,7 +849,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/models.Review"
+                                                "$ref": "#/definitions/models.RecentReviewResponse"
                                             }
                                         }
                                     }
@@ -1325,6 +1325,23 @@
                     "type": "string"
                 },
                 "week": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.RecentReviewResponse": {
+            "type": "object",
+            "properties": {
+                "comment": {
+                    "type": "string"
+                },
+                "createdAt": {
+                    "type": "string"
+                },
+                "food": {
+                    "$ref": "#/definitions/models.StandardFood"
+                },
+                "rating": {
                     "type": "integer"
                 }
             }
